Add Kimi K2.5 to ecosystem grounding
Released January 27, 2026 by Moonshot AI. Was being repeatedly
reported as "new" because it wasn't tracked in the grounding context.

--- a/config/model_releases.yaml
+++ b/config/model_releases.yaml
@@ -145,6 +145,11 @@ mistralai:
     ga_date: "2025-12-02"   # Inferred
     api_date: "2025-12-02"  # OpenRouter
 
+moonshot:
+  Kimi-K2.5:
+    ga_date: "2026-01-27"   # TechCrunch, SiliconANGLE
+    api_date: "2026-01-27"  # Same day (API + open source)
+
 # Agent enrichment notes:
 # - Models marked "needs verification" should be confirmed by agent
 # - Agent should add new releases discovered in daily news
