Upgrade to Claude Opus 4.6 with 128K output tokens
Update all model references, defaults, and branding from Opus 4.5
to Opus 4.6. Bump MODEL_MAX_TOKENS from 64K to 128K. Add pulsing
"NEW" badge to header subtitle.

--- a/config/providers.yaml.example
+++ b/config/providers.yaml.example
@@ -46,9 +46,9 @@ llm:
   # base_url: "https://api.anthropic.com"
 
   # Model identifier
-  # - Direct Anthropic: claude-opus-4-5-20251101, claude-sonnet-4-20250514, etc.
+  # - Direct Anthropic: claude-opus-4-6, claude-sonnet-4-20250514, etc.
   # - Proxy: whatever model name your proxy expects
-  model: "claude-opus-4-5-20251101"
+  model: "claude-opus-4-6"
 
   # Request timeout in seconds (1-600)
   timeout: 300
@@ -120,7 +120,7 @@ pipeline:
 #   mode: "openai-compatible"
 #   api_key: "${PROXY_API_KEY}"
 #   base_url: "https://your-litellm-proxy.example.com"
-#   model: "claude-opus-4-5"  # Your proxy's model alias
+#   model: "claude-opus-4-6"  # Your proxy's model alias
 #   timeout: 300
 #
 # image:
