--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       # Anthropic API Configuration
       - ANTHROPIC_API_BASE=${ANTHROPIC_API_BASE}
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
-      - ANTHROPIC_MODEL=${ANTHROPIC_MODEL:-claude-opus-4-5-20251101}
+      - ANTHROPIC_MODEL=${ANTHROPIC_MODEL:-claude-opus-4-6}
 
       # Twitter API (optional - skip Twitter collection if not set)
       - TWITTERAPI_IO_KEY=${TWITTERAPI_IO_KEY:-}
