Fix Phase 4.6 ecosystem enrichment
- Access title via item.item.title (AnalyzedItem wraps CollectedItem)
- Use correct call_with_thinking() params: messages=, budget_tokens=
- Access response.content instead of response.get('text', '')
- Rewrite _save_releases to surgically insert new entries into YAML
  preserving comments, formatting, blank lines, and quote styles
- New models inserted at top of provider section, not appended

--- a/config/model_releases.yaml
+++ b/config/model_releases.yaml
@@ -10,9 +10,14 @@
 #   - Web search verification for specific releases (Codex, etc.)
 #
 # Coverage: November 2025 onwards (post Claude Opus 4.6 knowledge cutoff)
-# Last verified: 2026-01-15
+# Last verified: 2026-02-06
 
 openai:
+  # GPT-5.3-Codex (auto-detected 2026-02-06)
+  GPT-5.3-Codex:
+    ga_date: "2026-02-05"
+    api_date: "unknown"
+
   # GPT-5.2 family
   GPT-5.2:
     ga_date: "2025-12-11"   # Wikipedia
@@ -65,6 +70,11 @@ openai:
     api_date: "2025-10-29"  # OpenRouter (later)
 
 anthropic:
+  # Claude-Opus-4.6 (auto-detected 2026-02-06)
+  Claude-Opus-4.6:
+    ga_date: "2026-02-05"
+    api_date: "unknown"
+
   Claude-Opus-4.5:
     ga_date: "2025-11-24"   # Wikipedia
     api_date: "2025-11-24"  # OpenRouter
@@ -138,6 +148,11 @@ deepseek:
     api_date: "2025-01-20"  # OpenRouter
 
 mistralai:
+  # Voxtral-Transcribe-2 (auto-detected 2026-02-06)
+  Voxtral-Transcribe-2:
+    ga_date: "2026-02-05"
+    api_date: "unknown"
+
   Mistral-Large-3:
     ga_date: "2025-12-01"   # Inferred
     api_date: "2025-12-01"  # OpenRouter
