data: Auto-update 2026-02-07

--- a/config/model_releases.yaml
+++ b/config/model_releases.yaml
@@ -10,7 +10,7 @@
 #   - Web search verification for specific releases (Codex, etc.)
 #
 # Coverage: November 2025 onwards (post Claude Opus 4.6 knowledge cutoff)
-# Last verified: 2026-02-06
+# Last verified: 2026-02-07
 
 openai:
   # GPT-5.3-Codex (auto-detected 2026-02-06)
@@ -95,6 +95,11 @@ anthropic:
     api_date: "2025-02-24"  # OpenRouter
 
 google:
+  # Genie-3 (auto-detected 2026-02-07)
+  Genie-3:
+    ga_date: "2026-02-06"
+    api_date: "unknown"
+
   Gemini-3:
     ga_date: "2025-11-18"   # Wikipedia
     api_date: "2025-11-18"  # OpenRouter
