data: Auto-update 2026-02-13

--- a/config/model_releases.yaml
+++ b/config/model_releases.yaml
@@ -10,9 +10,14 @@
 #   - Web search verification for specific releases (Codex, etc.)
 #
 # Coverage: November 2025 onwards (post Claude Opus 4.6 knowledge cutoff)
-# Last verified: 2026-02-07
+# Last verified: 2026-02-13
 
 openai:
+  # GPT-5.3-Codex-Spark (auto-detected 2026-02-13)
+  GPT-5.3-Codex-Spark:
+    ga_date: "2026-02-12"
+    api_date: "unknown"
+
   # GPT-5.3-Codex (auto-detected 2026-02-06)
   GPT-5.3-Codex:
     ga_date: "2026-02-05"
@@ -95,6 +100,11 @@ anthropic:
     api_date: "2025-02-24"  # OpenRouter
 
 google:
+  # Gemini-3-Deep-Think (auto-detected 2026-02-13)
+  Gemini-3-Deep-Think:
+    ga_date: "2026-02-12"
+    api_date: "unknown"
+
   # Genie-3 (auto-detected 2026-02-07)
   Genie-3:
     ga_date: "2026-02-06"
